[package]
name = "polly_wallet"
version = "0.1.0"
authors = ["James Duley <jagduley@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-serde = "0.6"
base64 = "0.13"
ring = "0.16"
